--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 
 Changes for Gcis::Client
 
-0.09 Mon Nov 17
-     Documentation, better error handling for put_file
+0.10 Tue Jan 13 2015
+     Allow hash to become a query string for $gcis->get.
+
+0.09 Mon Nov 17 2014
+     Documentation, better error handling for put_file.
 
